added evaluation list and common query
